<resources>
    <string name="app_name">RotzerApp</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Hasło</string>
    <string name="login_text_welcome">Aby utrzymać kontakt z nami, zaloguj się za pomocą swoich danych osobowych!</string>
    <string name="login_text_title">Witamy ponownie!</string>
    <string name="log_in">Zaloguj się</string>
    <string name="register_title_text">Witaj użytkowniku!</string>
    <string name="register_text">Wpisz swoje dane osobowe i dołącz do naszej drużyny.</string>
    <string name="register">Zarejestruj się</string>

    <string name="signup_login_hint">Już masz konto? Zaloguj się</string>
    <string name="login_signup_hint">Nie masz jeszcz konta? Zarejestruj się</string>
    <string name="login_name_hint">Imię</string>
    <string name="login_age_hint">Wiek użytkownika</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="prompt">Wybierz</string>
    <string name="home">Dzisiaj</string>
    <string name="like">Raporty</string>
    <string name="wykres">Wykres</string>
    <string name="settings">Ustawienia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="information">Informacje</string>
    <string name="duringAnalysis">W trakcie analizy</string>
    <string name="chance_getting_pregnant">Szansa na zajście w ciąże:</string>
    <string name="body_temperature">Temperatura ciała</string>
    <string name="temperature">Temperatura:</string>
    <string name="measurement_time">Godzina:</string>
    <string name="save">Zapisz</string>
    <string name="description_mucus">Opis śluzu</string>
    <string name="presence_mucus">Obeność śluzu:</string>
    <string name="type_mucus">Rodzaj śluzu</string>
    <string name="cervix">Szyjka macicy</string>
    <string name="cervical_height">Wysokość:</string>
    <string name="cervix_dilation">Rozwarcie:</string>
    <string name="cervix_hardness">Twardość:</string>
    <string name="bleeding">Krwawienie</string>

</resources>