<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="#666666">

    <item
        android:id="@+id/like"
        android:enabled="true"
        android:icon="@drawable/ic_heart"
        android:title="@string/like"
        app:cnb_backgroundColor="@color/md_deep_purple_700"
        app:cnb_iconColor="@color/md_deep_purple_300"
        app:cnb_iconTintMode="src_in"/>

    <item
        android:id="@+id/today"
        android:enabled="true"
        android:icon="@drawable/ic_today"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/md_deep_purple_700"
        app:cnb_iconColor="@color/md_deep_purple_300"
        app:cnb_iconTintMode="src_in"/>


    <item
        android:id="@+id/chart"
        android:enabled="true"
        android:icon="@drawable/ic_chart"
        android:title="@string/wykres"
        app:cnb_backgroundColor="@color/md_deep_purple_700"
        app:cnb_iconColor="@color/md_deep_purple_300"
        app:cnb_iconTintMode="src_in"/>


</menu>