<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.registration.RegistrationActivity"
    android:background="@color/background_main_color"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_main"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo"
            android:layout_marginBottom="@dimen/margin_bottom_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card"
            android:layout_margin="@dimen/margin_card">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="@dimen/margin_card">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_title_text"
                    style="@style/login_header_text_style"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_text"
                    android:layout_marginBottom="@dimen/margin_bottom_end"
                    style="@style/login_text_style"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/hint_color"
                    android:layout_marginBottom="@dimen/margin_between"
                    android:hint="Imię"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeErrorColor="@color/error_color"
                    app:errorTextColor="@color/error_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_register_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/hint_color"
                    android:layout_marginBottom="@dimen/margin_between"
                    android:hint="@string/login_email_hint"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeErrorColor="@color/error_color"
                    app:errorTextColor="@color/error_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_register_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_between"
                    android:hint="@string/login_password_hint"
                    android:textColorHint="@color/hint_color"
                    app:endIconMode="password_toggle"
                    app:endIconCheckable="true"
                    app:endIconTint="@color/colorAccent"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeErrorColor="@color/error_color"
                    app:errorTextColor="@color/error_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_register_password_repeat"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_between"
                    android:hint="@string/login_password_hint"
                    android:textColorHint="@color/hint_color"
                    app:endIconMode="password_toggle"
                    app:endIconCheckable="true"
                    app:endIconTint="@color/colorAccent"
                    app:boxStrokeColor="@color/purple_200"
                    app:boxStrokeErrorColor="@color/error_color"
                    app:errorTextColor="@color/error_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_register_password_repeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_register"
                    style="@style/login_button"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/margin_between"
                    android:text="@string/register" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textGoToLogin"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent"
            android:layout_marginHorizontal="20dp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
